deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: django-todo
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django-ctr
          image: dockerkashi/react-django-app:latest
          ports:
            - containerPort: 8001
