service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service 
  namespace: django-todo

spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: LoadBalancer
