ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  rules:
    - host: "django-todo.info"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
